--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="/MPM">MPM</a></li>
             <li><a href="/motorverk2">motorwerk</a></li>
+            <li><a href="/crona">Crona</a></li>
         </ul>
     </header>
 </body>
