--- a/crona/index.html
+++ b/crona/index.html
@@ -510,10 +510,10 @@
             </div>
         </div>
     </footer>
-    <script defer src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script defer src="/js/jquery-2.1.4.min.js"></script>
-    <script defer src="/js/owl.carousel.min.js"></script>
-    <script defer src="/js/common.js"></script>
+    <script async defer src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script async defer src="/js/jquery-2.1.4.min.js"></script>
+    <script async defer src="/js/owl.carousel.min.js"></script>
+    <script async defer src="/js/common.js"></script>
     <script type="text/javascript" src="/js/alerts/toastr.js"></script>
     <script type="text/javascript" src="/js/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
 </body>
