--- a/crona/index.html
+++ b/crona/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Constant Not Found">
     <meta name="keywords" content="Constant Not Found">    
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.min.css">
     <link rel="stylesheet" href="/css/owl.carousel.css">
     <link rel="stylesheet" href="/css/owl.theme.css">
     <link href="/css/alerts/toastr.css" rel="stylesheet" type="text/css">
