--- a/crona/index.html
+++ b/crona/index.html
@@ -366,7 +366,9 @@
             <div class="contact-container">
                 <ul class="contact-item contact-active">
                     <li>
-                        <img alt="" height="39" src="/images/bg1-bl8-1.png" width="40" /><p>+7(812) 456-52-56</p>
+                        <img alt="" height="39" src="/images/bg1-bl8-1.png" width="40" />
+                        <p>+7(812) 456-52-56</p>
+                        
                     </li>
                     <li><img alt="" height="39" src="/images/skype-128.png" width="40" /> <span>margarita.uma</span></li>
                     <li><img alt="" height="39" src="/images/mail-128.png" width="40" /> <span>mikhaylova@crona-fc.ru</span></li>                   
