--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="/MPM">MPM</a></li>
             <li><a href="/motorverk2">motorwerk</a></li>
             <li><a href="/crona">Crona</a></li>
+            <li><a href="/wantRock">Rock</a></li>
         </ul>
     </header>
 </body>
