--- a/wantRock/index.html
+++ b/wantRock/index.html
@@ -5,7 +5,7 @@
 	<title>Облицовка домов и зданий Дагестанским камнем по всей России</title>
 	<meta name="viewport" content="width=980">
 
-	<link rel="canonical" href=""/>
+	<link rel="canonical" href="http://хочукамень.рф"/>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>									
 	<link href="js/fotorama.css" rel="stylesheet">
 	<script src="js/fotorama.js"></script>
@@ -125,7 +125,7 @@
 						<div class="descriptions">
                             Введите свой телефон и через 15 минут получите <b>идеальное комплексное решение</b> для Вашего обьекта!</div>
                             <div class="descriptions">Введите свой телефон:</div>
-							<form id="application" action="application1.php" method=post enctype="multipart/form-data" novalidate="novalidate" onsubmit="yaCounter32846767.reachGoal('lid-head'); return true;" _lpchecked="1">
+							<form id="form" enctype="multipart/form-data" novalidate="novalidate" onsubmit="yaCounter32846767.reachGoal('lid-head'); return true;" _lpchecked="1">
 
 												<input name="DATA[PHONE_WORK]"  type="tel" id="applicationTelephone" maxlength="20" placeholder="+7 (___) ___-__-__" required="" class="input input-min required valid">
 												<input class="applicationButton" type="submit" value="Заказать расчет это бесплатно" name="submit"/>
@@ -1090,6 +1090,8 @@ $('input[placeholder]').each(function(){
  
 })(jQuery);
 </script>
+
+<!--
 <script type="text/javascript">
 /* init Call Service */
 var CallSiteId = '908c11f720ec5e09f1c0b63eee91e2d9';
@@ -1104,7 +1106,8 @@ var CallBaseUrl = '//uptocall.com';
     if (sc) sc.parentNode.insertBefore(lt, sc);
     else document.documentElement.firstChild.appendChild(lt);
 })();
-</script>
+</script> -->
+
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
     (function (d, w, c) {
@@ -1144,6 +1147,7 @@ var CallBaseUrl = '//uptocall.com';
   ga('send', 'pageview');
 
 </script>
+<script src="js/common.js"></script>
 <div class="zvon_ok">
 <a href="tel:88632796251"><img src="/images/zvon_ok.png"></a>
 </div>
