--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="/motorverk2">motorwerk</a></li>
             <li><a href="/crona">Crona</a></li>
             <li><a href="/wantRock">Rock</a></li>
+            <li><a href="/form">form</a></li>
         </ul>
     </header>
 </body>
