--- a/wantRock/index.html
+++ b/wantRock/index.html
@@ -123,21 +123,20 @@
 						<div class="zayavka_header">
 						<h3>Закажите бесплатный расчет стоимости</h3>
 						<div class="descriptions">
-                            Введите свой телефон и через 15 минут получите <b>идеальное комплексное решение</b> для Вашего обьекта!</div>
-                            <div class="descriptions">Введите свой телефон:</div>
+              Введите свой телефон и через 15 минут получите <b>идеальное комплексное решение</b> для Вашего обьекта!</div>
+              <div class="descriptions">Введите свой телефон:</div>
 							<form id="form" enctype="multipart/form-data" novalidate="novalidate" onsubmit="yaCounter32846767.reachGoal('lid-head'); return true;" _lpchecked="1">
-
-												<input name="DATA[PHONE_WORK]"  type="tel" id="applicationTelephone" maxlength="20" placeholder="+7 (___) ___-__-__" required="" class="input input-min required valid">
-												<input class="applicationButton" type="submit" value="Заказать расчет это бесплатно" name="submit"/>
-												<input name="referer" type="hidden" value="">
-														<input name="phrase" type="hidden" value="">
-														<input value="хочукамень.рф"  name="DATA[UF_CRM_1448961077]" type="hidden">
-											</form>
-                            <div class="description_after">
-                                Заполнение заявки Вас не к чему не обязывает!<br>
-                                Вы сможете отказаться в любой момент!
-                            </div>
-
+                <input name="DATA[PHONE_WORK]"  type="tel" id="applicationTelephone" maxlength="20" placeholder="+7 (___) ___-__-__" required="" class="input input-min required valid">
+                <input class="applicationButton cme-btn" type="submit" value="Заказать расчет это бесплатно" name="submit"/>
+                <input name="referer" type="hidden" value="">
+                <input name="phrase" type="hidden" value="">
+                <input value="хочукамень.рф"  name="DATA[UF_CRM_1448961077]" type="hidden">
+                <div class="callme-result"></div>
+              </form>
+              <div class="description_after">
+                  Заполнение заявки Вас не к чему не обязывает!<br>
+                  Вы сможете отказаться в любой момент!
+              </div>
 						</div>
 					</div>	
 
@@ -1091,10 +1090,9 @@ $('input[placeholder]').each(function(){
 })(jQuery);
 </script>
 
-<!--
 <script type="text/javascript">
 /* init Call Service */
-var CallSiteId = '908c11f720ec5e09f1c0b63eee91e2d9';
+var CallSiteId = '513b9cafd6396eeb274e6eafdad7514a';
 var CallBaseUrl = '//uptocall.com';
 (function() {
     var lt = document.createElement('script');
@@ -1106,7 +1104,7 @@ var CallBaseUrl = '//uptocall.com';
     if (sc) sc.parentNode.insertBefore(lt, sc);
     else document.documentElement.firstChild.appendChild(lt);
 })();
-</script> -->
+</script>
 
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript">
