--- a/wantRock/index.html
+++ b/wantRock/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+	
+	<meta charset="utf-8"/>
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<title>Облицовка домов и зданий Дагестанским камнем по всей России</title>
 	<meta name="viewport" content="width=980">
