--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="/wantRock">Rock</a></li>
             <li><a href="/form">form</a></li>
             <li><a href="/mishka/index.html">mishka</a></li>
+            <li><a href="/mishka/catalog.html">mishka-catalog</a></li>
+            <li><a href="/mishka/form.html">mishka-form</a></li>            
         </ul>
     </header>
 </body>
