--- a/mishka/catalog.html
+++ b/mishka/catalog.html
@@ -11,7 +11,7 @@
       <div class="header-menu__header-wrap">
         <ul class="header-menu__items"> 
           <li class="header-menu__item--logo">
-            <a href="#">    
+            <a href="index.html">    
               <picture>
                 <source media="(min-width: 1150px)"
                 srcset="img/logo-desktop.svg">
@@ -25,12 +25,12 @@
           </li>   
                 
           <li class="header-menu__item  header-menu__item--catalog">
-            <a class="header-menu__link  header-menu__link--catalog" href="#">
+            <a class="header-menu__link  header-menu__link--catalog" href="catalog.html">
             <span class="header-menu__span  header-menu__tablet-desktop-invisible"></span>Каталог товаров</a>
           </li>
 
           <li class="header-menu__item  header-menu__item--order">
-            <a class="header-menu__link  header-menu__link--order" href="#">
+            <a class="header-menu__link  header-menu__link--order" href="form.html">
             <span class="header-menu__span  header-menu__tablet-desktop-invisible"></span>Вязание на заказ</a>
           </li>
 
