--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         <h1></h1>
         <ul>
             <li><a href="/MPM">MPM</a></li>
-            <li><a href="/motorverk2">motorwerk</a></li>
-            <li><a href="/crona">Crona</a></li>
-            <li><a href="/wantRock">Rock</a></li>
-            <li><a href="/form">form</a></li>
+            <li><a href="/ktisis">ktisis</a></li> 
             <li><a href="/mishka/index.html">mishka</a></li>
             <li><a href="/mishka/catalog.html">mishka-catalog</a></li>
             <li><a href="/mishka/form.html">mishka-form</a></li>            
