--- a/pages/pink/form.html
+++ b/pages/pink/form.html
@@ -27,9 +27,9 @@
         <nav class="header__nav navbar">
           <ul id="responsive-menu" class="header__menu nav navbar-nav collapse navbar-collapse">
             <li class="header__item"><a href="index.html" class="header__link">Главная</a></li>
-            <li class="header__item"><a href="form.html" class="header__link">Фотографии</a></li>
-            <li class="header__item"><a href="" class="header__link">Конкурс</a></li>
-            <li class="header__item"><a href="" class="header__link">HTML Academy</a></li>
+            <li class="header__item"><a href="#" class="header__link">Фотографии</a></li>
+            <li class="header__item"><a href="form.html" class="header__link">Конкурс</a></li>
+            <li class="header__item"><a href="#" class="header__link">HTML Academy</a></li>
           </ul>
         </nav>
       </div>
