--- a/pages/pink/form.html
+++ b/pages/pink/form.html
@@ -121,11 +121,11 @@
               <ul class="contacts-form__inputs">
                 <li class="contacts-form__input-block">
                   <label for="number" class="contacts-form__label">Номерок телефончика</label>
-                  <div class="contacts-form__img"><img src="img/phone.svg" alt="" width="20" height="19"></div>
+                  <div class="contacts-form__img hidden-xs"><img src="img/phone.svg" alt="" width="20" height="19"></div>
                   <input type="text" id="number" name="Номер телефона" placeholder="Номер, пожайлуста" class="contacts-form__input">
                 </li>
                 <li class="contacts-form__input-block">
-                  <div class="contacts-form__img"><img src="img/mail.svg" alt="" width="18" height="13"></div>
+                  <div class="contacts-form__img hidden-xs"><img src="img/mail.svg" alt="" width="18" height="13"></div>
                   <label for="mail" class="contacts-form__label">Адресок почты</label>
                   <input type="text" id="mail" name="почта" placeholder="E-mail, пожалуйста" class="contacts-form__input">
                 </li>
