--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="HandheldFriendly" content="true">
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/maine56n0tx4glru2yddvx6r.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/mainp1x1ug3oqp15kfyldi.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="Works">
         <meta property="og:title" content="">
@@ -46,7 +46,7 @@
                         </a>
                     </li>
                     <li class="ad-list-items__item">
-                        <a href="pages/burtans" class="ad-list-items__link">
+                        <a href="pages/burtrans" class="ad-list-items__link">
                             <img src="static/img/content/burtrans.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Буртранс</span>
                         </a>
                     </li>
@@ -167,7 +167,7 @@
         </div>
 
 
-        <script src="static/js/maine56n0tx4glru2yddvx6r.min.js"></script>
+        <script src="static/js/mainp1x1ug3oqp15kfyldi.min.js"></script>
     </body>
 
 </html>
