--- a/pages/iris/printing-service.html
+++ b/pages/iris/printing-service.html
@@ -12,7 +12,7 @@
         <meta name="HandheldFriendly" content="true">
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/mainpz93sl8alsh9w9udi.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main13brzg2hb9p90wqxgvi.min.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="default title">
         <meta property="og:title" content="">
@@ -47,7 +47,7 @@
                                 <div class="header__cont-txt header__mail">print-iris@yandex.ru</div>
                             </div>
                             <ul class="header__menu">
-                                <li class="header__menu-item"><a href="service.html" class="header__menu-link">Цены</a>
+                                <li class="header__menu-item"><a href="index.html" class="header__menu-link">Цены</a>
                                 </li>
                                 <li class="header__menu-item"><a href="/" class="header__menu-link header__menu-link--active">Услуги</a>
                                 </li>
@@ -198,7 +198,7 @@
                         </li>
                         <li class="footer__bot-item footer__bot-item--menu">
                             <ul class="footer__menu">
-                                <li class="footer__menu-item"><a href="service.html" class="footer__menu-link">Цены</a>
+                                <li class="footer__menu-item"><a href="index.html" class="footer__menu-link">Цены</a>
                                 </li>
                                 <li class="footer__menu-item"><a href="/" class="footer__menu-link footer__menu-link--active">Услуги</a>
                                 </li>
@@ -214,7 +214,7 @@
         </div>
 
 
-        <script src="static/js/mainpz93sl8alsh9w9udi.min.js"></script>
+        <script src="static/js/main13brzg2hb9p90wqxgvi.min.js"></script>
         <script src="static/js/separate-js/jquery-2.1.4.min.js"></script>
         <script src="static/js/separate-js/owl.carousel.min.js"></script>
         <script src="static/js/separate-js/common.js"></script>
