--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="HandheldFriendly" content="true">
 
         <!--[if (gt IE 9)|!(IE)]><!-->
-        <link href="static/css/mainp1x1ug3oqp15kfyldi.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main.css" rel="stylesheet" type="text/css">
         <!--<![endif]-->
         <meta property="og:title" content="Works">
         <meta property="og:title" content="">
@@ -40,6 +40,11 @@
         <div class="page__header">
             <div class="header">
                 <ul class="ad-list-items">
+                        <li class="ad-list-items__item">
+                            <a href="pages/br_design" class="ad-list-items__link">
+                                <img src="static/img/content/br_design.jpg" class="ad-list-items__img"><span class="ad-list-items__text">br design</span>
+                            </a>
+                    </li>
                     <li class="ad-list-items__item">
                         <a href="pages/afrin" class="ad-list-items__link">
                             <img src="static/img/content/afrin.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Afrin</span>
@@ -150,11 +155,11 @@
                             <img src="static/img/content/crona.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Крона</span>
                         </a>
                     </li>
-                    <li class="ad-list-items__item">
+                    <!-- <li class="ad-list-items__item">
                         <a href="pages/techmart" class="ad-list-items__link">
                             <img src="static/img/content/techmart.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Техномарт</span>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
