--- a/pages/skincare/index.html
+++ b/pages/skincare/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a class="header__link" href="/account.html">Профиль</a>
+                        <a class="header__link" href="/pages/skincare/account.html">Профиль</a>
                     </li>
                     <li class="header__list-item">
                         <a class="header__link header__link header__link_active" href="#">Забронированное</a>
