--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="page__header">
             <div class="header">
                 <ul class="ad-list-items">
-                        <li class="ad-list-items__item">
-                            <a href="pages/br_design" class="ad-list-items__link">
-                                <img src="static/img/content/br_design.jpg" class="ad-list-items__img"><span class="ad-list-items__text">br design</span>
-                            </a>
-                    </li>
+                    <!-- <li class="ad-list-items__item">
+                        <a href="pages/br_design" class="ad-list-items__link">
+                            <img src="static/img/content/br_design.jpg" class="ad-list-items__img"><span class="ad-list-items__text">br design</span>
+                        </a>
+                    </li> -->
                     <li class="ad-list-items__item">
                         <a href="pages/afrin" class="ad-list-items__link">
                             <img src="static/img/content/afrin.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Afrin</span>
