--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                         </a>
                     </li>
                     <li class="ad-list-items__item">
-                        <a href="pages/print" class="ad-list-items__link">
+                        <a href="pages/iris" class="ad-list-items__link">
                             <img src="static/img/content/iris.jpg" class="ad-list-items__img"><span class="ad-list-items__text">iris</span>
                         </a>
                     </li>
                     <li class="ad-list-items__item">
-                        <a href="pages/mpm" class="ad-list-items__link">
+                        <a href="pages/MPM" class="ad-list-items__link">
                             <img src="static/img/content/mpm.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Mpm</span>
                         </a>
                     </li>
@@ -125,11 +125,11 @@
                             <img src="static/img/content/transair.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Трансаэро</span>
                         </a>
                     </li>
-                    <li class="ad-list-items__item">
+                    <!-- <li class="ad-list-items__item">
                         <a href="pages/shnaider" class="ad-list-items__link">
                             <img src="static/img/content/shnaider.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Шнайдер</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="ad-list-items__item">
                         <a href="pages/hypertherm" class="ad-list-items__link">
                             <img src="static/img/content/hypertherm.jpg" class="ad-list-items__img"><span class="ad-list-items__text">Hyperherm</span>
